; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_syscalls.c_socket.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_syscalls.c_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.socket_args = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socket(%struct.proc* %0, %struct.socket_args* %1, i32* %2) #0 {
  %4 = alloca %struct.proc*, align 8
  %5 = alloca %struct.socket_args*, align 8
  %6 = alloca i32*, align 8
  store %struct.proc* %0, %struct.proc** %4, align 8
  store %struct.socket_args* %1, %struct.socket_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.proc*, %struct.proc** %4, align 8
  %8 = load %struct.socket_args*, %struct.socket_args** %5, align 8
  %9 = getelementptr inbounds %struct.socket_args, %struct.socket_args* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.socket_args*, %struct.socket_args** %5, align 8
  %12 = getelementptr inbounds %struct.socket_args, %struct.socket_args* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.socket_args*, %struct.socket_args** %5, align 8
  %15 = getelementptr inbounds %struct.socket_args, %struct.socket_args* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 (...) @proc_selfpid()
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @socket_common(%struct.proc* %7, i32 %10, i32 %13, i32 %16, i32 %17, i32* %18, i32 0)
  ret i32 %19
}

declare dso_local i32 @socket_common(%struct.proc*, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @proc_selfpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
